# cppcourse-brunel

./: CMakeLists.txt  Constant.hpp  Makefile  Network.cpp  Network.hpp  Neuron.cpp  Neuron.hpp  README.md  image.txt  main.cpp  unitTest.cpp
gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
html/: Constant_8hpp_source.html  Network_8hpp_source.html  Neuron_8hpp_source.html  annotated.html  classNetwork-members.html  classNetwork.html  classNeuron-members.html  classNeuron.html  classes.html  files.html  functions.html  functions_func.html  index.html
html/search/: all_4.js  all_5.js  all_7.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_8.js  search.js
